--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
     color: #666;
     font-size: 12px;
     font-family: 'Okra', Helvetica;
-    -webkit-backface-visibility: hidden;
 }
 
 .header_container{
@@ -394,32 +393,23 @@
     cursor: default;
     border-radius: 0px;
 }
-.productupdated_detail{
+.productupdated_detailcontainer{
     box-sizing: border-box;
     padding-left: 0.75rem;
     padding-right: 0.75rem;
     width: 100%;
 }
-.product_updated_container{
-    margin-bottom: 7px;
-    gap: 0.25rem;
-    display: flex;
-    flex-wrap: wrap;
-    overflow: hidden;
-    height: 15px;
-    width: 90%;
-}
-.product_content_container{
+.productupdatecontentcontainer{
     flex-direction: column;
     width: 100%;
     display: flex;
 }
-.product_updated_title_container{
+.product_titlecontainer{
     flex-direction: column;
     display: flex;
     margin-bottom: 0.5rem;
 }
-.product_updated_title{
+.product_title{
     overflow: hidden;
     color: rgb(31, 31, 31);
     font-weight: 600;
@@ -432,7 +422,7 @@
     height: 36px;
     margin-bottom: 6px;
 }
-.product_updated_price{
+.priceandcontainer{
     display: flex;
     -webkit-box-pack: justify;
     justify-content: space-between;
@@ -440,6 +430,25 @@
     align-items: center;
     width: 100%;
 }
+.addtocartupdatebutton{
+    cursor: pointer;
+    width: 66px;
+    border: 1px solid rgb(49, 134, 22);
+    height: 31px;
+    color: rgb(49, 134, 22);
+    font-weight: 600;
+    font-size: 13px;
+    font-family: Okra;
+    background-color: rgb(247, 255, 249);
+    border-radius: 0.375rem;
+    gap: 0.125rem;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
 
 
 
@@ -455,7 +464,6 @@
         margin: 0;
         background-color: white;
         -webkit-tap-highlight-color: transparent;
-        -webkit-backface-visibility: hidden;
         color: #666;
         font-size: 12px;
         font-family: 'Okra', Helvetica;
@@ -494,4 +502,14 @@
         transition:0.5s ease 0s;
         margin-right: 12px;
     }
+}
+.the_end{
+    color: rgb(28, 28, 28);
+    font-size: 24px;
+    font-family: Okra-Medium;
+    font-weight: 600;
+    line-height: 32px;
+    margin-top:10px;
+    margin-left: 100px;
+    margin-bottom: 20px;
 }
